// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
<div>
  <button
    aria-label="Blog 1 , NaN Invalid Date"
    class="card feature-card"
    role="link"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    >
      <div
        aria-hidden="true"
        class="feature-card__outer-container feature-card__outer-container--auto"
      >
        <div
          class="feature-card__date"
        >
          <div
            class="feature-card__annotation feature-card__annotation--mobile"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="nan-invalid-date"
              >
                NaN Invalid Date
              </h3>
            </div>
          </div>
          <div
            class="feature-card__annotation feature-card__annotation--tablet"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="nan"
              >
                NaN
              </h3>
            </div>
          </div>
          <div
            class="feature-card__annotation feature-card__annotation--tablet"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="invalid-date"
              >
                Invalid Date
              </h3>
            </div>
          </div>
        </div>
        <div
          class="feature-card__center-container"
        >
          <div
            class="section__outer feature-card__title"
          >
            <h2
              class="section__heading section__heading--link section__heading--no-padding"
              id="blog-1-"
            >
              Blog 1 
            </h2>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card__banner"
    />
  </button>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
<div>
  <button
    aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
    class="card feature-card"
    role="link"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    >
      <div
        aria-hidden="true"
        class="feature-card__outer-container feature-card__outer-container--auto"
      >
        <div
          class="feature-card__date"
        >
          <div
            class="feature-card__annotation feature-card__annotation--mobile"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="23-30-dec"
              >
                23-30 Dec
              </h3>
            </div>
          </div>
          <div
            class="feature-card__annotation feature-card__annotation--tablet"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="23-30"
              >
                23-30
              </h3>
            </div>
          </div>
          <div
            class="feature-card__annotation feature-card__annotation--tablet"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="dec"
              >
                Dec
              </h3>
            </div>
          </div>
        </div>
        <div
          class="feature-card__center-container"
        >
          <div
            class="section__outer feature-card__title"
          >
            <h2
              class="section__heading section__heading--link section__heading--no-padding"
              id="untitled-blog-(deleted)"
            >
              Untitled blog (DELETED)
            </h2>
          </div>
          <div
            class="feature-card__children"
          >
            <div
              class="tag__outer"
            >
              <span
                class="tag tag--travel"
              >
                Travel
              </span>
            </div>
          </div>
        </div>
        <div
          class="feature-card__image-container"
        >
          <div
            class="image__outer feature-card__image"
          >
            <div
              class="image__placeholder"
              style="padding-bottom: 100%;"
            >
              <div
                class="image__spinner-container"
              >
                <div
                  class="skeleton__outer image__skeleton"
                >
                  <div
                    class="skeleton__shimmer"
                    style="margin-left: -0px;"
                  />
                </div>
              </div>
              <img
                alt="card"
                class="image__img image__img--hidden image__img--light"
                src="https://i.imgur.com/ppPEuDs.jpg"
              />
              <img
                alt="card"
                class="image__img image__img--hidden image__img--dark"
                src="https://i.imgur.com/ppPEuDs.jpg"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card__banner"
      style="background-color: rgb(1, 87, 155);"
    />
  </button>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
<div>
  <button
    aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
    class="card feature-card"
    role="link"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    >
      <div
        aria-hidden="true"
        class="feature-card__outer-container feature-card__outer-container--auto"
      >
        <div
          class="feature-card__date"
        >
          <div
            class="feature-card__annotation feature-card__annotation--mobile"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="23-30-dec"
              >
                23-30 Dec
              </h3>
            </div>
          </div>
          <div
            class="feature-card__annotation feature-card__annotation--tablet"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="23-30"
              >
                23-30
              </h3>
            </div>
          </div>
          <div
            class="feature-card__annotation feature-card__annotation--tablet"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="dec"
              >
                Dec
              </h3>
            </div>
          </div>
        </div>
        <div
          class="feature-card__center-container"
        >
          <div
            class="section__outer feature-card__title"
          >
            <h2
              class="section__heading section__heading--link section__heading--no-padding"
              id="st-ives--2018"
            >
              St Ives  2018
            </h2>
          </div>
          <div
            class="feature-card__children"
          >
            <div
              class="tag__outer"
            >
              <span
                class="tag tag--travel"
              >
                Travel
              </span>
            </div>
          </div>
        </div>
        <div
          class="feature-card__image-container"
        >
          <div
            class="image__outer feature-card__image"
          >
            <div
              class="image__placeholder"
              style="padding-bottom: 100%;"
            >
              <div
                class="image__spinner-container"
              >
                <div
                  class="skeleton__outer image__skeleton"
                >
                  <div
                    class="skeleton__shimmer"
                    style="margin-left: -0px;"
                  />
                </div>
              </div>
              <img
                alt="card"
                class="image__img image__img--hidden image__img--light"
                src="https://i.imgur.com/ppPEuDs.jpg"
              />
              <img
                alt="card"
                class="image__img image__img--hidden image__img--dark"
                src="https://i.imgur.com/ppPEuDs.jpg"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card__banner"
      style="background-color: rgb(1, 87, 155);"
    />
  </button>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
<div>
  <button
    aria-label="Blog 1 , NaN Invalid Date"
    class="card feature-card test-custom-classname"
    role="link"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    >
      <div
        aria-hidden="true"
        class="feature-card__outer-container feature-card__outer-container--auto"
      >
        <div
          class="feature-card__date"
        >
          <div
            class="feature-card__annotation feature-card__annotation--mobile"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="nan-invalid-date"
              >
                NaN Invalid Date
              </h3>
            </div>
          </div>
          <div
            class="feature-card__annotation feature-card__annotation--tablet"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="nan"
              >
                NaN
              </h3>
            </div>
          </div>
          <div
            class="feature-card__annotation feature-card__annotation--tablet"
          >
            <div
              class="subsection__outer"
            >
              <h3
                class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                id="invalid-date"
              >
                Invalid Date
              </h3>
            </div>
          </div>
        </div>
        <div
          class="feature-card__center-container"
        >
          <div
            class="section__outer feature-card__title"
          >
            <h2
              class="section__heading section__heading--link section__heading--no-padding"
              id="blog-1-"
            >
              Blog 1 
            </h2>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card__banner"
    />
  </button>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
<div>
  <div>
    <button
      aria-label="Blog 1 , NaN Invalid Date"
      class="card feature-card blogs-list__card"
      role="link"
      style="cursor: pointer;"
      type="button"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="nan-invalid-date"
                >
                  NaN Invalid Date
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="nan"
                >
                  NaN
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="invalid-date"
                >
                  Invalid Date
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer feature-card__title"
            >
              <h2
                class="section__heading section__heading--link section__heading--no-padding"
                id="blog-1-"
              >
                Blog 1 
              </h2>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </button>
    <button
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="card feature-card blogs-list__card"
      role="link"
      style="cursor: pointer;"
      type="button"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30"
                >
                  23-30
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="dec"
                >
                  Dec
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer feature-card__title"
            >
              <h2
                class="section__heading section__heading--link section__heading--no-padding"
                id="st-ives--2018"
              >
                St Ives  2018
              </h2>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="tag__outer"
              >
                <span
                  class="tag tag--travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
        style="background-color: rgb(1, 87, 155);"
      />
    </button>
    <button
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="card feature-card blogs-list__card"
      role="link"
      style="cursor: pointer;"
      type="button"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30"
                >
                  23-30
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="dec"
                >
                  Dec
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer feature-card__title"
            >
              <h2
                class="section__heading section__heading--link section__heading--no-padding"
                id="untitled-blog-(deleted)"
              >
                Untitled blog (DELETED)
              </h2>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="tag__outer"
              >
                <span
                  class="tag tag--travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
        style="background-color: rgb(1, 87, 155);"
      />
    </button>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="test-custom-classname"
  >
    <button
      aria-label="Blog 1 , NaN Invalid Date"
      class="card feature-card blogs-list__card"
      role="link"
      style="cursor: pointer;"
      type="button"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="nan-invalid-date"
                >
                  NaN Invalid Date
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="nan"
                >
                  NaN
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="invalid-date"
                >
                  Invalid Date
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer feature-card__title"
            >
              <h2
                class="section__heading section__heading--link section__heading--no-padding"
                id="blog-1-"
              >
                Blog 1 
              </h2>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </button>
    <button
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="card feature-card blogs-list__card"
      role="link"
      style="cursor: pointer;"
      type="button"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30"
                >
                  23-30
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="dec"
                >
                  Dec
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer feature-card__title"
            >
              <h2
                class="section__heading section__heading--link section__heading--no-padding"
                id="st-ives--2018"
              >
                St Ives  2018
              </h2>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="tag__outer"
              >
                <span
                  class="tag tag--travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
        style="background-color: rgb(1, 87, 155);"
      />
    </button>
    <button
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="card feature-card blogs-list__card"
      role="link"
      style="cursor: pointer;"
      type="button"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30"
                >
                  23-30
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="dec"
                >
                  Dec
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer feature-card__title"
            >
              <h2
                class="section__heading section__heading--link section__heading--no-padding"
                id="untitled-blog-(deleted)"
              >
                Untitled blog (DELETED)
              </h2>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="tag__outer"
              >
                <span
                  class="tag tag--travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
        style="background-color: rgb(1, 87, 155);"
      />
    </button>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
<div>
  <div>
    <button
      aria-label="Blog 1 , NaN Invalid Date"
      class="card feature-card blogs-list__card blogs-list__card--with-controls"
      role="link"
      style="cursor: pointer;"
      type="button"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="nan-invalid-date"
                >
                  NaN Invalid Date
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="nan"
                >
                  NaN
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="invalid-date"
                >
                  Invalid Date
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer feature-card__title"
            >
              <h2
                class="section__heading section__heading--link section__heading--no-padding"
                id="blog-1-"
              >
                Blog 1 
              </h2>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </button>
    <button
      class="button__outer button__outer--destructive button__outer--no-bouncy button__outer--no-bouncy--destructive blogs-list__control"
      type="button"
    >
      <span
        class="button__child"
      >
        Delete blog
      </span>
    </button>
    <button
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="card feature-card blogs-list__card blogs-list__card--with-controls"
      role="link"
      style="cursor: pointer;"
      type="button"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30"
                >
                  23-30
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="dec"
                >
                  Dec
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer feature-card__title"
            >
              <h2
                class="section__heading section__heading--link section__heading--no-padding"
                id="st-ives--2018"
              >
                St Ives  2018
              </h2>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="tag__outer"
              >
                <span
                  class="tag tag--travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
        style="background-color: rgb(1, 87, 155);"
      />
    </button>
    <button
      class="button__outer button__outer--destructive button__outer--no-bouncy button__outer--no-bouncy--destructive blogs-list__control"
      type="button"
    >
      <span
        class="button__child"
      >
        Delete blog
      </span>
    </button>
    <button
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="card feature-card blogs-list__card blogs-list__card--with-controls"
      role="link"
      style="cursor: pointer;"
      type="button"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="23-30"
                >
                  23-30
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer"
              >
                <h3
                  class="subsection__heading subsection__heading--link subsection__heading--no-padding"
                  id="dec"
                >
                  Dec
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer feature-card__title"
            >
              <h2
                class="section__heading section__heading--link section__heading--no-padding"
                id="untitled-blog-(deleted)"
              >
                Untitled blog (DELETED)
              </h2>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="tag__outer"
              >
                <span
                  class="tag tag--travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card__banner"
        style="background-color: rgb(1, 87, 155);"
      />
    </button>
    <button
      class="button__outer button__outer--destructive button__outer--no-bouncy button__outer--no-bouncy--destructive button__outer--disabled blogs-list__control"
      disabled=""
      type="button"
    >
      <span
        class="button__child"
      >
        Delete blog
      </span>
    </button>
  </div>
</div>
`;
